fix: fix overflow in session chat and make links highlightable

--- a/projects/shared-components/qna/qna-list/qna-list-item/qna-list-item.component.scss
+++ b/projects/shared-components/qna/qna-list/qna-list-item/qna-list-item.component.scss
@@ -52,6 +52,7 @@ p {
 
       .content {
         margin: $space-4 0;
+        word-break: break-word;
       }
     }
 
